# pico-build

./: CMakeLists.txt  LICENSE  README.md  main.c
.github/workflows/: cmake.yml
